[Core] Fixed too small distance between support statements

--- a/src/rpocore/static/css/campaign.css
+++ b/src/rpocore/static/css/campaign.css
@@ -17,3 +17,6 @@
     width: 400px;
     min-width: 400px;
 }
+.supportStatement {
+    margin-top: 10px;
+}
